# deprecated_rust_wasm_template

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  bootstrap.js  index.html  index.js  package.json  webpack.config.js
benches/: benches.rs
ci/: script.sh
src/: lib.rs
tests/: tests.rs
