[package]
name = "rust_wasm_template"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[lib]
crate-type = [
  # Build a cdylib to make a `.wasm` library.
  "cdylib",
  # Build an rlib for testing and benching.
  "rlib"
]

[dependencies]
wasm-bindgen = "0.2.10"

[profile.release]
# Enable this option for better time and size profiling.
# debug = true

# Optimize for small code size, rather than speed.
opt-level = "s"

# Always enable link-time optimizations to shrink binary sizes.
lto = true
